tests/snapshots/fix__moves_every_text_of_a_label_split_across_texts-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 400">
          <g data-node="source">
            <rect x="20" y="20" width="100" height="56"/>
            <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
          </g>
          <g data-node="target">
            <rect x="260" y="160" width="100" height="56"/>
            <text x="310" y="193" text-anchor="middle" font-size="14">Target</text>
          </g>
          <path id="flow" data-from="source" data-to="target" d="M 120 48 L 190 48 L 190 188 L 260 188"/>
          <text data-label="retry" data-label-for="flow" x="181" y="107" font-size="14" text-anchor="end">Retry</text>
          <text data-label="retry" data-label-for="flow" x="181" y="124" font-size="14" text-anchor="end">with backoff</text>
          <text data-label="retry" data-label-for="flow" x="181" y="141" font-size="14" text-anchor="end">3 times</text>
        </svg>
