tests/snapshots/fix__nests_a_request_and_reply_that_both_detour_in_a_u_shape-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 420">
        <g data-node="browse">
          <circle cx="200" cy="80" r="50"/>
          <text x="200" y="85" text-anchor="middle" font-size="14">Browse</text>
        </g>
        <g data-node="cart">
          <circle cx="200" cy="220" r="50"/>
          <text x="200" y="225" text-anchor="middle" font-size="14">Cart</text>
        </g>
        <g data-node="products">
          <rect x="130" y="339" width="130" height="41"/>
          <text x="195" y="365" text-anchor="middle" font-size="14">Products</text>
        </g>
        <path id="query" data-from="browse" data-to="products" fill="none" d="M 153 63 L 106 63 L 106 366 L 130 366"/>
        <path id="details" data-from="products" data-to="browse" fill="none" d="M 130 353 L 122 353 L 122 97 L 153 97"/>
      </svg>
