tests/snapshots/fix__nests_a_request_and_reply_that_both_detour_in_a_u_shape.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 4,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 10.71,
  "remainingIssues": 0
}
