tests/snapshots/fix__nests_a_request_and_reply_that_turn_the_same_corner.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 1.49,
  "remainingIssues": 0
}
