tests/snapshots/fix__places_a_label_again_when_the_crossings_on_its_connector_change.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0
}
